# data_workflow

./: .env  .env.ci  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  Dockerfile.amq_test_gen  Dockerfile.artemis_data_collector  Dockerfile.autoreducer  Dockerfile.autoreducer.himem  Dockerfile.catalog  Dockerfile.dasmon  Dockerfile.oncat  Dockerfile.pv_test_gen  Dockerfile.webmon  Dockerfile.webmonchow  Dockerfile.workflow  LICENSE  Makefile  README.md  README.rst  conda_development.yml  conda_environment.yml  conftest.py  dap_test.html  demo_artemis_failover.py  docker-compose.localdev.yml  docker-compose.yml  environment_dasmon.yml  environment_webmon.yml  makefile  pyproject.toml  pytest.ini  requirements_test.txt  run_artemis_tests.sh  setup.cfg  setup.py  (+1 more)
.github/: dependabot.yml  pull_request_template.md
config/: livedata_local_settings.py
dasmon_listener/: README.md  amq_consumer.py  listener_daemon.py  reduction_script_update.py  settings.py
docs/: Makefile  adara-apcs-block-diagrams.vsd  adara-processing-cataloging-system-overview.docx  admin.rst  conf.py  glossary.rst  index.rst  metrics.rst
extra/: pylint.rc
nginx/: Dockerfile  django.conf  docker-entrypoint.sh  san.cnf  wait-for-it.sh
reporting/: manage.py
src/: Makefile  docker-entrypoint.sh  postgres_backup.sh  requirements.txt  setup.py  setup_dasmon_listener.py
src/dasmon_app/: docker-entrypoint.sh  pyproject.toml  setup.cfg
src/dasmon_app/dasmon_listener/: README.md  amq_consumer.py  dasmon_listener.py  listener_daemon.py  settings.py
src/dasmon_app/dasmon_listener/tests/: test_dasmon_listener_amq_consumer.py
src/webmon_app/: MANIFEST.in  docker-entrypoint.sh  pyproject.toml  setup.cfg
src/webmon_app/plots/: view_util.py
src/webmon_app/reporting/: manage.py
src/webmon_app/reporting/dasmon/: README.md  admin.py  legacy_status.py  models.py  urls.py  view_util.py  views.py
src/webmon_app/reporting/dasmon/migrations/: 0001_initial.py  0002_delete_legacyurl.py
src/webmon_app/reporting/dasmon/sql/: indices.sql
src/webmon_app/reporting/dasmon/templatetags/: dasmon_tags.py
src/webmon_app/reporting/fixtures/: db_init.json
src/webmon_app/reporting/formats/en_US/: formats.py
src/webmon_app/reporting/metrics/: urls.py  view_util.py  views.py
src/webmon_app/reporting/pvmon/: README.md  admin.py  models.py  urls.py  view_util.py  views.py
src/webmon_app/reporting/pvmon/migrations/: 0001_initial.py  0002_delete_pvstring.py  0003_add_created_updated_to_monitoredvariable.py  0003_pv_timestamp_pvcache_timestamp_and_more.py  0004_add_created_updated_to_monitoredvariable.py
src/webmon_app/reporting/pvmon/sql/: indices.sql  stored_procs.sql
src/webmon_app/reporting/reduction/: admin.py  forms.py  models.py  urls.py  view_util.py  views.py
src/webmon_app/reporting/reduction/migrations/: 0001_initial.py
src/webmon_app/reporting/report/: admin.py  catalog.py  detect_mobile.py  forms.py  models.py  urls.py  view_util.py  views.py
src/webmon_app/reporting/report/management/commands/: add_indices.py  add_stored_procs.py  clearcache.py  ensure_user.py
src/webmon_app/reporting/report/migrations/: 0001_initial.py
src/webmon_app/reporting/report/sql/: indices.sql  stored_procs.sql
src/webmon_app/reporting/reporting_app/: urls.py  view_util.py  wsgi.py
src/webmon_app/reporting/reporting_app/settings/: base.py  develop.py  envtest.py  prod.py  unittest.py
src/webmon_app/reporting/static/: bar_chart.css  bar_chart.js  column_search.js  dashboard.css  dashboard_simple.css  datatables.css  facility_filter.js  live_update.js  mobile.css  monthly_chart.js  plot_init.js  plotly_dynamic_loader.js  plotting_line.js  tables.css
src/webmon_app/reporting/static/1d_plot/: 1d_plots_v2.js  appfunctions.js  mustachetemplates.js  spectrum.css
src/webmon_app/reporting/templates/: base.html
src/webmon_app/reporting/templates/dasmon/: dashboard.html  dashboard_simple.html  diagnostics.html  expert_status.html  help.html  live_monitor.html  live_runs.html  live_runs_datatables.html  run_summary.html  run_summary_datatables.html  signal_table.html
src/webmon_app/reporting/templates/reduction/: configuration_dgs.html  configuration_ref_m.html  configuration_seq.html
src/webmon_app/reporting/templates/report/: base_instrument.html  detail.html  detail_with_region_selection.html  global_summary.html  instrument.html  instrument_datatables.html  ipts_summary.html  ipts_summary_datatables.html  live_errors.html  processing_admin.html
src/webmon_app/reporting/templates/users/: authenticate.html
src/webmon_app/reporting/tests/test_dasmon/: test_legacy_status.py  test_models.py  test_view.py  test_view_util.py
src/webmon_app/reporting/tests/test_metrics/: test_view_util.py
src/webmon_app/reporting/tests/test_pvmon/: test_models.py  test_view_util.py  test_views.py
src/webmon_app/reporting/tests/test_reduction/: test_forms.py  test_models.py  test_view_util.py  test_views.py
src/webmon_app/reporting/tests/test_report/: test_catalog.py  test_forms.py  test_view_util.py  test_views.py
src/webmon_app/reporting/tests/test_users/: test_models.py  test_view_util.py  test_views.py
src/webmon_app/reporting/users/: admin.py  models.py  urls.py  view_util.py  views.py
src/webmon_app/reporting/users/migrations/: 0001_initial.py
src/workflow_app/: docker-entrypoint.sh  pyproject.toml  setup.cfg
src/workflow_app/workflow/: amq_client.py  amq_listener.py  daemon.py  icat_activemq.xml  settings.py  sns_post_processing.py  state_utilities.py  states.py  workflow_process.py
src/workflow_app/workflow/database/: docker-entrypoint.sh  manage.py  settings.py  test_transactions.py  transactions.py
src/workflow_app/workflow/database/report/: models.py
src/workflow_app/workflow/tests/: database_models_test.py  test_amq_client.py  test_amq_listener.py  test_daemon.py  test_sns_post_processing.py  test_state_utilities.py  test_states.py  test_transactions.py  test_workflow_process.py
test/: amq_looper.py  consumer.py  data_ready.py  (+9 more)
(+419 files in other folders)
