[metadata]
name = django-nscd-dasmon
version = 2.6.0
description = Common models for nscd web monidor
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
    dasmon_listener = dasmon_listener.listener_daemon:run
    reduction_update = dasmon_listener.reduction_script_update:run

[options]
python_requires = >= 3.7
packages = find:

[options.packages.find]
exclude =
    workflow.tests

[options.extras_require]
tests = pytest

[aliases]
test = pytest
