[build-system]
requires = ["setuptools >= 42", "wheel", "toml", "versioningit ~= 1.1"]
build-backend = "setuptools.build_meta"

[tool.check-wheel-contents]
ignore = ["W002"]  # duplicate files

[tool.versioningit.vcs]
method = "git"
default-tag = "1.0.0"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "reporting/_version.py"
template = "__version__ = '{version}'"
