[build-system]
requires = ["setuptools >= 42", "wheel", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nscd-webmon"
description = "Common models for nscd web monitor"
dynamic = ["version"]
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "NScD Oak Ridge National Laboratory", email = "ndav@email.ornl.gov"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "http://neutrons.github.com/"

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["reporting.tests", "reporting.tests.*"]

[tool.setuptools.package-data]
reporting = [
    "dasmon/sql/*.sql",
    "pvmon/sql/*.sql",
    "report/sql/*.sql",
    "fixtures/db_init.json",
    "static/**/*",
    "templates/**/*",
]

[tool.check-wheel-contents]
ignore = ["W002", "W004"]  # duplicate files and can't import django migrations

[tool.versioningit.vcs]
method = "git"
default-tag = "1.0.0"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "reporting/_version.py"
template = "__version__ = '{version}'"
