[metadata]
name = django-nscd-webmon
version = 2.6.0
description = Common models for nscd web monidor
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.7
include_package_data = true
packages = find:

[options.packages.find]
exclude =
    reporting.tests
    reporting.tests.*

[options.extras_require]
tests = pytest

[aliases]
test = pytest
