[metadata]
name = django-nscd-webmon
description = Common models for nscd web monidor
author = NScD Oak Ridge National Laboratory
author_email = ndav@email.ornl.gov
url = http://neutrons.github.com/
license = GNU LGPL
classifiers =
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

[options]
python_requires = >= 3.7
include_package_data = true
packages = find:

[options.packages.find]
exclude =
    reporting.tests
    reporting.tests.*

[options.extras_require]
tests = pytest

[aliases]
test = pytest
