[build-system]
requires = ["setuptools >= 42", "wheel", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nscd-workflow"
description = "SNS data workflow manager"
dynamic = ["version"]
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
authors = [
    {name = "NScD Oak Ridge National Laboratory", email = "ndav@email.ornl.gov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "http://neutrons.github.com/"

[project.scripts]
workflowmgr = "workflow.sns_post_processing:run"

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["workflow.tests*"]

[tool.versioningit.vcs]
method = "git"
default-tag = "1.0.0"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "workflow/_version.py"
template = "__version__ = '{version}'"
