[metadata]
name = django-nscd-workflow
version = 2.6.0
description = Common models for nscd web monidor
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
    workflowmgr = workflow.sns_post_processing:run

[options]
python_requires = >= 3.7
packages = find:

[options.packages.find]
exclude =
    workflow.tests

[options.extras_require]
tests = pytest

[aliases]
test = pytest
